# TSP

./: .gitignore  AGENTS.md  README.en.md  README.md  README.zh.md  Specification.md  TSP.md  improve.md
.github/workflows/: publish-pytspclient.yml  release.yml  test-gtsp.yml  test-pytspclient.yml
client/pytspclient/: .gitignore  API.md  API.zh.md  README.md  pyproject.toml  test_client.py
client/pytspclient/examples/: README.md  demo_agent.py
client/pytspclient/pytspclient/: __init__.py  client.py  types.py
client/pytspclient/pytspclient/adapters/: __init__.py  anthropic.py  base.py  openai.py
client/pytspclient/scripts/: upload.sh
client/pytspclient/tests/: test_anthropic_adapter.py  test_api.py  test_base.py  test_error_codes.py  test_normal_api.py  test_openai_adapter.py
examples/: README.md  demo.cast  demo_agent.py  demo_basic.py  requirements.txt
gtsp/: .gitignore  README.md  README.zh.md  bugs.md  go.mod  test_concurrent_sessions.py  test_doublestar.go  test_results_session_logging.md
gtsp/doc/tool_spec/: edit.md  (+6 more)
gtsp/script/: build.sh
gtsp/src/: main.go
gtsp/test/: api_test.go  concurrency_test.go  fs_test.go  panic_test.go  sandbox_test.go  schema_test.go  schema_validation_test.go  shell_test.go  websocket_test.go
gtsp/tools/: tsp_tester.py
impl/: gtsp.md
spec/: Protocol.md  Protocol.zh.md  Specification.md  TSP.md  TSP.zh.md
spec/tools/: README.md  edit.md  execute_bash.md  glob.md  grep_search.md  list_dir.md  process_list.md  process_output.md
tools/: README.md  execute_bash.md  process_stop.md  read_file.md  write_file.md
(+32 files in other folders)
