[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytspclient"
version = "0.2.2"
authors = [
  { name="AlexaZhou", email="AlexaZhou@163.com" },
]
description = "A Python client for Tool Server Protocol (TSP)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/alexazhou/TSP"
"Bug Tracker" = "https://github.com/alexazhou/TSP/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "class"
